- So now I have some models for the Github API and a bunch of really bad wrapper code -- TODO: The bearer API token is loaded from "Private". lol if I know if that's a good idea. -- Private is ignored in Git

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-Packages
-.build
-xcuserdata
 *.xcodeproj
-DerivedData/
+.build
 .DS_Store
-db.sqlite
 .swiftpm
-
+db.sqlite
+DerivedData
+Packages
+Private
+xcuserdata
